--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "sharp": "^0.33.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
