--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 5500",
-    "build": "next build",
+    "dev": "prisma generate && next dev",
+    "build": "prisma generate && prisma db push && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json": "json-server --watch db.json -p 3001"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.5",
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^5.9.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@types/react-redux": "^7.1.33",
     "@types/uuid": "^9.0.8",
     "axios": "^1.6.7",
     "next": "14.0.4",
+    "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
