--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.9.1",
     "@reduxjs/toolkit": "^2.1.0",
+    "@stripe/stripe-js": "^2.4.0",
     "@types/react-redux": "^7.1.33",
     "@types/uuid": "^9.0.8",
     "axios": "^1.6.7",
@@ -24,6 +25,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
+    "stripe": "^14.15.0",
+    "svix": "^1.16.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
