--- a/package.json
+++ b/package.json
@@ -11,23 +11,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.5",
-    "@emotion/css": "^11.11.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.9.1",
-    "@reduxjs/toolkit": "^2.1.0",
     "@stripe/stripe-js": "^2.4.0",
-    "@types/react-redux": "^7.1.33",
     "@types/uuid": "^9.0.8",
     "axios": "^1.6.7",
     "next": "14.0.4",
     "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.0",
     "stripe": "^14.15.0",
     "svix": "^1.16.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
