--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.8.1",
     "stripe": "^14.15.0",
     "svix": "^1.16.0",
     "uuid": "^9.0.1",
